# JiraUtility

./: .gitignore  README.md  pyproject.toml  requirements.txt
JiraUtility/: JiraConnector.py  LabelMaker.py  __main__.py
